[metadata]
name = comics_ocr
version = 0.1.0
description = ComicsOCR is a Python package created for easily distributing OCR models trained for golden age of comics.
author = Gürkan Soykan
author_email = grkansoykan@gmail.com
keywords = comics_ocr, mmocr_comics
license = MIT
url = https://github.com/gsoykan/comics_ocr

[options]
python_requires = >=3.8, <4
packages = find:
install_requires =
    imgaug==0.4.0
    lanms==1.0.2
    lanms_neo==1.0.2
    lmdb==1.2.1
    matplotlib==3.5.2
    # mmcv_full==1.5.2
    # mmdet==2.25.0
    mmcv-full==1.5.0
    mmdet==2.21.0
    nlpretext==1.2.1
    pydantic==1.10.11
    spacy==3.6.0
    nltk==3.5
    numpy>=1.21.6,<1.22.3
    onnxruntime==1.15.1
    opencv_contrib_python==4.5.4.60
    opencv_python==4.6.0.66
    opencv_python_headless==4.5.4.60
    packaging==21.3
    Pillow==10.0.0
    pyclipper==1.3.0
    rapidfuzz==1.8.3
    scikit_image==0.18.3
    Shapely==1.8.0


[options.extras_require]
cuda =
    torchvision==0.10.0+cu102
    torch==1.9.0+cu102

cpu =
    torchvision==0.10.0
    torch==1.9.0
